--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -19,7 +19,7 @@
 
 - name: Restart sshd
   service: name=ssh state=restarted
-  when: ansible_distribution == 'Ubuntu' or ansible_distributioj == 'Debian'
+  when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
 
 - name: Restart sshd
   service: name=sshd state=restarted
