--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -29,7 +29,7 @@
   copy: src=sudo-users dest=/etc/sudoers.d/users owner=root group=root mode=0440
   when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
 
-- name: Package install
+- name: Package install (Ubuntu/Debian)
   apt: name={{ item }} state=latest
   with_items:
   - unzip
@@ -39,6 +39,7 @@
   - python-setuptools
   when: ansible_distribution == 'Ubuntu'
 
+-name: Package install (CentOS)
   yum: name={{ item }} state=latest
   with_items:
   - unzip
