--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -32,8 +32,13 @@
   copy: src=sudo-users dest=/etc/sudoers.d/users owner=root group=root mode=0440
   when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian' or ansible_distribution == 'CentOS'
 
-- name: update Ubuntu packages
+- name: update apt cache
   apt: update_cache=true
+  when: ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian'
+
+- name: update yum cache
+  yum: update_cache=true
+  when: ansible_distribution == 'CentOS'
 
 - name: Package install (Ubuntu/Debian)
   apt: name={{ item }} state=latest
